mysql-nombreDelProyecto.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-nombreDelProyecto
  namespace: bd
spec:
  selector:
    matchLabels:
      app: p-mysql-nombreDelProyecto
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: p-mysql-nombreDelProyecto
    spec:
      containers:
      - image: mysql:8.0
        name: p-mysql-nombreDelProyecto
        ports:
        - containerPort: 3306
          name: p-mysql-nombreDelProyecto
        volumeMounts:
        - name: mysql-persistent-storage-nombreDelProyecto
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-persistent-storage-nombreDelProyecto
        persistentVolumeClaim:
          claimName: mysql-pvc-nombreDelProyecto
