services_mysql-nombreDelProyecto.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-nombreDelProyecto
  namespace: bd
spec:
  type: NodePort
  selector:
    app: p-mysql-nombreDelProyecto
  ports:
  - protocol: TCP
    port: 3306
    nodePort: 30036
    targetPort: 3306
