services_web-nombreDelProyecto.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-nombreDelProyecto
  namespace: aplicaciones
spec:
  selector:
    k8s-app: web-nombreDelProyecto
  ports:
  - name: tcp-80-80-jdiu
    protocol: TCP
    port: 80
    targetPort: 80
  type: LoadBalancer
