ingress_api-nombreDelProyecto.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-nombreDelProyecto
  namespace: api
  annotations:
    kubernetes.io/ingress.class: public
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/configuration-snippet: |
      rewrite ^(/api-nombreDelProyecto)$ $1/ redirect;
spec:
  rules:
  - host: api.formosa.gob.ar
    http:
      paths:
      - path: /api-nombreDelProyecto(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: api-nombreDelProyecto
            port:
              number: 3000
