ingress_web-nombreDelProyecto.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-nombreDelProyecto
  namespace: aplicaciones
  annotations:
    kubernetes.io/ingress.class: public
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/configuration-snippet: |
      rewrite ^(/web-nombreDelProyecto)$ $1/ redirect;
spec:
  rules:
  - host: web.NombreDelProyecto.gob.ar
    http:
      paths:
      - path: /web-nombreDelProyecto(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: web-nombreDelProyecto
            port:
              number: 80
